# Little_Heta

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
docs/cli/: ask.md  clean.md  init.md  insert-planning.md  insert.md  mem-clean.md  mem-show.md  query.md  recall.md  remember.md  skill.md  status.md  vector.md
docs/i18n/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.zh-CN.md  README.zh-TW.md
src/heta/: __init__.py
src/heta/assistants/: __init__.py
src/heta/cli/: __init__.py  ask.py  clean.py  errors.py  init.py  insert.py  mem_show.py  query.py  recall.py  remember.py  skill.py
src/heta/config/: schema.py
src/heta/kb/: agent.py  audio_parser.py  clean.py  code_parser.py  discovery.py  html_parser.py  image_parser.py  insert.py  models.py  parser.py  pdf_plan.py  static_insert.py  text.py  vector_index.py
src/heta/mem/: client.py  db.py  embedder.py  kb_invalidate.py  kb_store.py  kb_writer.py  l1_dedup.py  l1_extractor.py  l2_conflict.py  l2_extractor.py  models.py  pipeline.py  prompts.py  recall.py
src/heta/providers/: clients.py  litellm_models.py  (+2 more)
tests/: eval_qa.py  test_assistant_skills.py  test_audio_parser.py  test_clean.py  test_cli_errors.py  test_code_parser.py  test_config_io.py  test_html_parser.py  test_image_parser.py  test_kb_insert.py  test_kb_invalidate.py  test_l1_dedup.py  test_l2_conflict.py  test_memory_ingest.py  test_memory_prompts.py  test_pdf_plan.py  test_provider_clients.py  test_provider_models.py  test_query.py  test_recall_ranked_evidence.py  test_remember_cli.py  test_smart_query.py  test_validators.py  test_vector_index.py
(+6 files in other folders)
