[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "little-heta"
version = "0.1.0"
description = "Little Heta first-time initialization CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "PyYAML>=6.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "sqlite-vec>=0.1.6",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
heta = "heta.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
