[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "little-heta"
version = "0.2.2"
description = "Little Heta first-time initialization CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer==0.20.0",
    "rich==14.2.0",
    "PyYAML==6.0.3",
    "requests==2.32.5",
    "openai==2.30.0",
    "sqlite-vec==0.1.9",
    "pypdf==6.11.0",
    "beautifulsoup4==4.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
]

[project.scripts]
heta = "heta.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"heta.assistants" = ["templates/claude_skill/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
